<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modules.labbors.activity.AddNewLaborActivity">
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:orientation="vertical"
                  android:id="@+id/parrent_layout">

        <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="15dp"
                card_view:cardElevation="20dp">
            <LinearLayout android:layout_width="fill_parent"
                          android:layout_height="fill_parent"
                          android:layout_margin="15dp"
                          android:orientation="vertical">

                <android.support.design.widget.TextInputLayout

                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="5pt"

                        android:theme="@style/TextLabel">

                    <EditText
                            android:id="@+id/name_edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/full_name"
                            android:maxLength="25"
                            android:fontFamily="@font/samsungsansregular"
                            android:imeOptions="actionNext"
                            android:inputType="textCapWords"/>

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout

                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="5pt"

                        android:theme="@style/TextLabel">

                    <EditText
                            android:id="@+id/mobile_edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/mobile"
                            android:maxLength="10"
                            android:fontFamily="@font/samsungsansregular"
                            android:imeOptions="actionNext"
                            android:inputType="phone"/>

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5pt"
                        android:theme="@style/TextLabel">

                    <EditText
                            android:id="@+id/address_edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/address"
                            android:fontFamily="@font/samsungsansregular"
                            android:imeOptions="actionNext"
                            android:inputType="textPostalAddress"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5pt"
                        android:theme="@style/TextLabel">

                    <EditText
                            android:id="@+id/charges_edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/charges_per_day"
                            android:fontFamily="@font/samsungsansregular"
                            android:imeOptions="actionDone"
                            android:inputType="phone"/>

                </android.support.design.widget.TextInputLayout>

                <Button android:layout_width="fill_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="5pt"

                        android:text="@string/submit"
                        android:textColor="@color/colorWhite"
                        android:textAllCaps="false"
                        android:fontFamily="@font/samsungsansregular"
                        android:background="@drawable/round_btn"
                        android:id="@+id/submit_btn"/>


            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


</LinearLayout>