<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modules.labbors.activity.AddNewLaborActivity">
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:orientation="vertical"
                  android:id="@+id/parrent_layout">

        <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="15dp"
                card_view:cardElevation="20dp">
            <LinearLayout android:layout_width="fill_parent"
                          android:layout_height="fill_parent"
                          android:layout_margin="15dp"
                          android:orientation="vertical">

                <android.support.design.widget.TextInputLayout

                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="5pt"

                        android:theme="@style/TextLabel">

                    <EditText
                            android:id="@+id/labor_name_edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name_of_labor"
                            android:maxLength="25"
                            android:fontFamily="@font/samsungsansregular"
                            android:imeOptions="actionNext"
                            android:inputType="textCapWords"/>

                </android.support.design.widget.TextInputLayout>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="5pt"
                          android:fontFamily="@font/samsungsansregular"
                android:text="Select Payment Type*"/>
                <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                >

                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Advance"
                            android:id="@+id/advance_rb"
                            android:layout_marginTop="5pt"
                            android:fontFamily="@font/samsungsansregular"
                            android:checked="false"/>

                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Return Advance"
                            android:id="@+id/radvance_rb"
                            android:fontFamily="@font/samsungsansregular"
                            android:checked="false"/>
                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Payment"
                            android:id="@+id/payment_rb"
                            android:fontFamily="@font/samsungsansregular"
                            android:checked="false"/>
                </RadioGroup>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5pt"
                        android:theme="@style/TextLabel">

                    <EditText
                            android:id="@+id/amtpaid_edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/amount_to_be_paid"
                            android:fontFamily="@font/samsungsansregular"
                            android:imeOptions="actionDone"
                            android:inputType="phone"/>

                </android.support.design.widget.TextInputLayout>

                <Button android:layout_width="fill_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="5pt"

                        android:text="@string/submit"
                        android:textColor="@color/colorWhite"
                        android:textAllCaps="false"
                        android:fontFamily="@font/samsungsansregular"
                        android:background="@drawable/round_btn"
                        android:id="@+id/submit_btn"/>


            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


</LinearLayout>